/**
 * 数据分析平台提供给业务系统的报表查询API接口定义。业务平台可以通过API接口实现以下的功能：
 *
 * 1、查询指定条件的统计报表数据，包括：行驶统计、车辆告警数统计、充电告警统计等。
 *
 * 2、订阅指定条件的统计报表数据的推送。
 */

syntax = "proto3";

package com.chargerlink.gateway.analyser;

import "common.proto";

/** 报表查询API的接口定义。*/
service QueryService {
    /**
     * 查询指定条件的统计报表数据。
     *
     * 成功：返回对应的统计报表数据。
     *
     * 失败：返回gRPC错误。
     */
    rpc Query(ReportQueryReq) returns (ReportQueryResp);

    /**
   	 * 订阅指定条件的统计报表数据的实时推送。
   	 *
   	 * 成功：服务器端通过返回值stream实时推送统计报表数据，客户端可以通过关闭参数值stream停止接收推送报表数据。
   	 *
   	 * 失败：返回gRPC错误。
   	 */
    rpc Subscribe(stream ReportQueryReq) returns (stream ReportQueryResp);
}

/** 报表查询请求的消息定义。*/
message ReportQueryReq {
    uint32 report_id = 1;                                   /// (必填)查询的报表ID。其中：报表ID见README.md中的定义。
    uint64 from_time = 2;                                   /// (必填)查询的开始时间(北京时间的毫秒时间戳)。单位：毫秒。
    uint64 to_time   = 3;                                   /// (必填)查询的结束时间(北京时间的毫秒时间戳)。单位：毫秒。
    Period period = 4;                                      /// (必填)查询的报表统计周期。
    uint32 offset = 5;                                      /// (可选)返回统计记录的起始记录。null：0。
    uint32 total = 6;                                       /// (可选)返回统计记录的最大记录数。null：返回全部记录。
    map<uint32, Param> params = 7;                          /// (可选)附加的分组或查询条件。格式为：参数ID->参数值。其中：参数ID为常量Group的值，或其他扩展ID的值。

    /** 报表查询参数值的消息定义。*/
    message Param {
        repeated Value values = 1;                          /// (必填)查询参数值的列表。
    }

    /** 报表统计周期的常量定义。*/
    enum Period {
        PERIOD_COUNT   = 0;                                 /// 按次数统计。
        PERIOD_HOUR    = 1;                                 /// 按小时统计。
        PERIOD_DAY     = 2;                                 /// 按天统计。
        PERIOD_WEEK    = 3;                                 /// 按周统计。
        PERIOD_MONTH   = 4;                                 /// 按月统计。
        PERIOD_QUARTER = 5;                                 /// 按季度统计。
        PERIOD_YEAR    = 6;                                 /// 按年统计。
        PERIOD_ALL     = 7;                                 /// 全部统计。
    }

    /** 报表统计分组的常量定义。*/
    enum Group {
        GROUP_ACCESS_ID    = 0;                             /// 按照设备唯一标识(设备类型+设备ID)分组。
        GROUP_DEVICE_TYPE  = 1;                             /// 按照设备类型分组。
        GROUP_DEVICE_ID    = 2;                             /// 按照设备ID分组。
        GROUP_POWER_STATUS = 10;                            /// 按照车辆行驶状态分组。
        GROUP_EVSE_STATUS  = 11;                            /// 按照充电桩工作状态分组。
        GROUP_PLUG_STATUS  = 12;                            /// 按照充电枪工作状态分组。
        GROUP_ALARM_CODE   = 20;                            /// 按照报警代码分组。
        GROUP_EVENT_TYPE   = 21;                            /// 按照事件类型分组。
        GROUP_BRAND        = 30;                            /// 按照车辆或设备品牌分组。
        GROUP_ENTERPRISE   = 31;                            /// 按照运营企业分组。
    }
}

/** 报表查询应答的消息定义。*/
message ReportQueryResp {
    Result          result  = 1;                            /// (必填)返回的请求结果。
    uint32          offset  = 2;                            /// (操作成功时必填)统计结果的起始记录。
    uint32          total   = 3;                            /// (操作成功时必填)统计结果的总记录数。注：包含未返回的统计记录。
    repeated Record records = 4;                            /// (操作成功时必填)统计记录列表。

    /** 报表统计记录值的消息定义。*/
    message Record {
        uint64         time   = 1;                          /// (必填)统计时间(北京时间的毫秒时间戳)。单位：毫秒。
        repeated Value values = 2;                          /// (必填)统计值列表。
    }
}
